...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--ETABusTimeTable-->
        <scene sceneID="hNz-n2-bh7">
            <objects>
                <viewController storyboardIdentifier="ETABusTimeTableController" title="ETABusTimeTable" id="9pv-A4-QxB" customClass="ETABusTimeTableController" customModule="findmybusnj" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="180" sectionHeaderHeight="28" sectionFooterHeight="28" id="5e8-a6-Kmc">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <color key="sectionIndexBackgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <prototypes>
...
                            <outlet property="dataSource" destination="9pv-A4-QxB" id="ipb-e4-oTt"/>
                            <outlet property="delegate" destination="9pv-A4-QxB" id="wWW-yp-DxI"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" id="BUl-Fr-y7j">
                        <barButtonItem key="leftBarButtonItem" title="saveFavorite" width="10" id="uTz-rz-G5B">
                            <inset key="imageInsets" minX="25" minY="0.0" maxX="0.0" maxY="0.0"/>
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" hasAttributedTitle="YES" id="HBW-h7-NFN">
                                <rect key="frame" x="16" y="0.0" width="48" height="44"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <inset key="imageEdgeInsets" minX="8" minY="6" maxX="8" maxY="6"/>
                                <state key="normal" image="Heart">
...
                                                <segue destination="W8o-yS-xKl" kind="unwind" identifier="exit" unwindAction="dismissPopover:" id="DOV-Um-4Az"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
                            </navigationBar>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Stop Number" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Vw2-bt-EoC">
                                <rect key="frame" x="252" y="87" width="107" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" keyboardAppearance="alert" returnKeyType="done"/>
                                <connections>
                                    <outlet property="delegate" destination="Tj0-Q0-7wY" id="LBZ-Xj-NRS"/>
...
                                    </mask>
                                </variation>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B6b-yn-mjJ">
                                <rect key="frame" x="159.5" y="171" width="57" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Search"/>
                                <connections>
                                    <segue destination="W8o-yS-xKl" kind="unwind" identifier="search" unwindAction="searchForStop:" id="l2e-fS-rlO"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
            <point key="canvasLocation" x="1680" y="-1688"/>
        </scene>
        <!--Times-->
        <scene sceneID="v3z-z6-28E">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="GWM-jN-zNP" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Times" image="Bus" id="acW-dT-cKf"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="JDI-Nl-5oW">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
