...
    HUD.flash(.success, delay: 1.0)
  }

  /**
   Creates a `UIAlertController` that wanrs the user if they are trying to save a stop without having searched for one.
   
   - returns: `UIAlertController` that contains a "No stop to save" message and no handlers
   */
  fileprivate func empty_stop() -> UIAlertController {
    let warning = createUIAlertControllerWithDoneButton()
    warning.title = "No stop to save"
    warning.message = "Please search for a bus stop before saving"
    return warning
...
    return warning
  }
}

extension UIAlertPresenter {
  /**
   Creates a `UIAlertController` with a `UIAlertAction` that says "Done".
   The controller has no `title` or `message`, and
   the `UIAlertAction` has no handler. All must be set separately if needed.
   
   - returns: A basic `UIAlertController` with a done button attached to it to dismiss it
   */
  fileprivate func createUIAlertControllerWithDoneButton() -> UIAlertController {
...
